# AlgoFeeder

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cmake_install.cmake  insertionSort
feed/: randomInteger.txt
include/: AlgoFeeder.h  gnuplot.h  include.h  insertionSort.h
src/: insertionSort.cpp
